// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message IdentitytoolkitBetaOAuthIdpConfig {
  string name = 1;
  string client_id = 2;
  string issuer = 3;
  string display_name = 4;
  bool enabled = 5;
  string client_secret = 6;
  IdentitytoolkitBetaOAuthIdpConfigResponseType response_type = 7;
  string project = 8;
}

message IdentitytoolkitBetaOAuthIdpConfigResponseType {
  bool id_token = 1;
  bool code = 2;
  bool token = 3;
}

message ApplyIdentitytoolkitBetaOAuthIdpConfigRequest {
  IdentitytoolkitBetaOAuthIdpConfig resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteIdentitytoolkitBetaOAuthIdpConfigRequest {
  string service_account_file = 1;
  IdentitytoolkitBetaOAuthIdpConfig resource = 2;
}

message ListIdentitytoolkitBetaOAuthIdpConfigRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListIdentitytoolkitBetaOAuthIdpConfigResponse {
  repeated IdentitytoolkitBetaOAuthIdpConfig items = 1;
}

service IdentitytoolkitBetaOAuthIdpConfigService {
  rpc ApplyIdentitytoolkitBetaOAuthIdpConfig(ApplyIdentitytoolkitBetaOAuthIdpConfigRequest) returns (IdentitytoolkitBetaOAuthIdpConfig);
  rpc DeleteIdentitytoolkitBetaOAuthIdpConfig(DeleteIdentitytoolkitBetaOAuthIdpConfigRequest) returns (google.protobuf.Empty);
  rpc ListIdentitytoolkitBetaOAuthIdpConfig(ListIdentitytoolkitBetaOAuthIdpConfigRequest) returns (ListIdentitytoolkitBetaOAuthIdpConfigResponse);
}
